Fixed some literal wrapping (now occasionally goes insane)

--- a/_static/code_wrap.css
+++ b/_static/code_wrap.css
@@ -1,4 +1,4 @@
-p code  {
-     word-wrap: break-word !important;
-     white-space: pre-wrap !important;
- }
+.rst-content code {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
